--- a/views/user-signup.pug
+++ b/views/user-signup.pug
@@ -4,7 +4,7 @@ include utils.pug
 
 block content
     +errorSummary(errors)
-    form(action='/users/signup' method='post')
+    form(action='/signup' method='post')
         input(type='hidden' name='_csrf' value=csrfToken)
         +field('Username', 'username', username)
         +field('First Name', 'firstName', firstName)
