--- a/views/dashboard-tasks.pug
+++ b/views/dashboard-tasks.pug
@@ -1,10 +1,10 @@
-extends layout.pug
-
 include utils.pug
 
-block content
+p list content
     +errorSummary(errors)
     form(action='/api/lists' method='post')
         input(type='hidden' name='_csrf' value=csrfToken)
-        +field('name', 'name', name)
+        +field('name', 'name', name, '', 'name')
         button(type='submit') Submit
+
+block content
