--- a/views/dashboard-list.pug
+++ b/views/dashboard-list.pug
@@ -1,16 +1,20 @@
+extends layout
 
 include utils.pug
 
-div#content
-    div#topbar
-        p header
-    div#sidebar
-        ol
-            li Today's Tasks
-            li Tomorrow's Tasks
-            li All Tasks
-    div#main
-        include dashboard-tasks.pug
+block content
 
-    div#summary
-        include dashboard-summary.pug
+    div#content
+        div#topbar
+            p header
+        div#sidebar
+            ol#task-lists
+                li Today's Tasks
+                li Tomorrow's Tasks
+                li All Tasks
+        div#main
+            include dashboard-tasks.pug
+
+        div#summary
+            include dashboard-summary.pug
+        script(src="javascripts/dashboard-list.js")
