Trying to figure out front-end

--- a/views/dashboard-list.pug
+++ b/views/dashboard-list.pug
@@ -13,7 +13,9 @@ block content
                 li Tomorrow's Tasks
                 li All Tasks
         div#main
-            include dashboard-tasks.pug
+            include dashboard-task.pug
+        script(src="javascripts/dashboard-task.js")
+        
 
         div#summary
             include dashboard-summary.pug
