Got the general skeleton of dashboard list to work dynamically

--- a/views/dashboard-list.pug
+++ b/views/dashboard-list.pug
@@ -14,9 +14,10 @@ block content
                 li All Tasks
         div#main
             include dashboard-task.pug
-        script(src="javascripts/dashboard-task.js")
+        //- script(src="javascripts/dashboard-task.js")
         
 
         div#summary
             include dashboard-summary.pug
+        //- script(src="http://localhost:8080/public/javascripts/dashboard-list.js")
         script(src="javascripts/dashboard-list.js")
