--- a/views/dashboard-task.pug
+++ b/views/dashboard-task.pug
@@ -10,6 +10,6 @@ block content
             +field('name', 'name', name, '', 'name')
             button(type='submit') Submit
 
-        div#taskItems
+    div#taskContainer
     
     
