worked on index.css and tweaked some of the pug templates.

--- a/views/dashboard-list.pug
+++ b/views/dashboard-list.pug
@@ -3,19 +3,31 @@ extends layout
 include utils.pug
 
 block content
-
+    div#header
+        div#user
+            if locals.authenticated
+                span.welcome Welcome #{user.username}!
+                form(action='/logout' method='post')
+                    button(type='submit') Logout
     div#content
-        div#topbar
-            p header
         div#sidebar
-            ol#task-lists
-                li Today's Tasks
-                li Tomorrow's Tasks
-                li All Tasks
+            div.lists
+                div.list-header Inbox
+                ol#default-lists
+                    li Today's Tasks
+                    li Tomorrow's Tasks
+                    li All Tasks
+            div.lists
+                div.list-header Lists
+                ol#task-lists
+            div.lists
+                div.list-header Categories
+                ol#task-categories
         div#main
-            include dashboard-task.pug
+            div#add-task
+                include dashboard-task.pug
         //- script(src="javascripts/dashboard-task.js")
-        
+
 
         div#summary
             include dashboard-summary.pug
