--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,3 +1,86 @@
+* {
+    margin: 0px;
+}
+
+body {
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 12px;
+}
+
+#header {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: 40px;
+    color: #a5c9e7;
+    background-color: #0055b2;
+}
+
+#user {
+    display: flex;
+    align-items: flex-end;
+    margin: 10px;
+}
+
+#content {
+    display: grid;
+    grid-template-columns: 200px 1fr 1fr;
+    height: 100vh;
+    background-color: #cfe3f2;
+    padding-top: 10px;
+}
+
+#sidebar {
+    padding: 20px;
+}
+
+ol#task-lists,
+ol#default-lists {
+    margin-bottom: 10px;
+    padding: 0 0 10px 0;
+    list-style-type: none;
+    border-bottom: 1px solid #b3d4ed;
+}
+
+#main {
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 8px 8px 0 0;
+}
+
+#main form {
+    display: flex;
+    padding: 10px 0;
+}
+
+#taskContainer div {
+    padding: 8px;
+    border-bottom: 1px dotted gray;
+}
+
+.lists {
+    line-height: 2em;
+}
+
+.lists .list-header {
+    font-weight: bold;
+}
+
+.lists .list-header:hover,
+.lists li:hover {
+    background-color: #b3d2eb;
+    padding-left: 5px;
+}
+
+ol li {
+    line-height: 2em;
+}
+
+span.welcome {
+    font-size: 16px;
+    margin-right: 10px;
+}
+
 h1 {
     color: #555555;
 }
