Can create tasks in db as well as populate tasks on DOM. Add task button disapears on clickaway. URL fragment represents listId

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -58,6 +58,15 @@ ol#default-lists {
     border-bottom: 1px dotted gray;
 }
 
+#form-container {
+    display:flex;
+    align-items: center;
+}
+
+.addTaskbutton {
+    justify-self: flex-end;
+}
+
 .lists {
     line-height: 2em;
 }
