--- a/views/dashboard-list.pug
+++ b/views/dashboard-list.pug
@@ -33,4 +33,4 @@ block content
             include dashboard-summary.pug
         script(src="/javascripts/dashboard-list.js")
         script(src="/javascripts/dashboard-inbox.js")
-        
+        script(src="/javascripts/dashboard-tasks.js")
