--- a/views/dashboard-task.pug
+++ b/views/dashboard-task.pug
@@ -5,9 +5,12 @@ include utils.pug
 block content
     p My Tasks
         +errorSummary(errors)
-        form(action='/api/tasks' method='post')
-            input(type='hidden' name='_csrf' value=csrfToken)
-            +field('', 'name', name, '', 'Add a task...')
-            button(type='submit') Add
+        div#form-container
+            form(id="add-task-form")
+                input(type='hidden' name='_csrf' value=csrfToken)
+                +field('', 'name', name, '', 'Add a task...')
+            div.addTaskDiv.hidden-add(hidden='true')
+                button.addTaskButton.hidden-add(type='submit' hidden="true") Add
+
 
     div#taskContainer
