--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,32 +1,52 @@
+@import url("/stylesheets/main.css");
+@import url("/stylesheets/sidebar.css");
+@import url("/stylesheets/summary.css");
+@import url("/stylesheets/utils.css");
+
+:root {
+    --main-color: #0055b2;
+    --secondary-color: #a5c9e7;
+    --tertiary-color: #cfe3f2;
+    --divider-color: #b3d4ed;
+    --button-color-light: #1575c1;
+}
+
 * {
     margin: 0px;
+    box-sizing: border-box;
 }
 
 body {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow-y: hidden;
     font-family: Helvetica, Arial, sans-serif;
     font-size: 12px;
+    background-color: var(--tertiary-color);
 }
 
+/* header block */
 #header {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    height: 40px;
-    color: #a5c9e7;
-    background-color: #0055b2;
+    height: 46px;
+    color: var(--tertiary-color);
+    background-color: var(--main-color);
 }
 
 #user {
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     margin: 10px;
 }
 
+/* content block positioning */
 #content {
     display: grid;
     grid-template-columns: 200px 1fr 1fr;
-    height: 100vh;
-    background-color: #cfe3f2;
+    height: 100%;
     padding-top: 10px;
 }
 
@@ -34,53 +54,10 @@ body {
     padding: 20px;
 }
 
-ol#task-lists,
-ol#default-lists {
-    margin-bottom: 10px;
-    padding: 0 0 10px 0;
-    list-style-type: none;
-    border-bottom: 1px solid #b3d4ed;
-}
-
 #main {
+    position: relative;
     padding: 20px;
+    height: 100%;
     background-color: #ffffff;
-    border-radius: 8px 8px 0 0;
-}
-
-#main form {
-    display: flex;
-    padding: 10px 0;
-}
-
-#taskContainer div {
-    padding: 8px;
-    border-bottom: 1px dotted gray;
-}
-
-.lists {
-    line-height: 2em;
-}
-
-.lists .list-header {
-    font-weight: bold;
-}
-
-.lists .list-header:hover,
-.lists li:hover {
-    background-color: #b3d2eb;
-    padding-left: 5px;
-}
-
-ol li {
-    line-height: 2em;
-}
-
-span.welcome {
-    font-size: 16px;
-    margin-right: 10px;
-}
-
-h1 {
-    color: #555555;
+    border-radius: 5px 5px 0 0;
 }
