--- a/views/dashboard-task.pug
+++ b/views/dashboard-task.pug
@@ -5,9 +5,11 @@ include utils.pug
 block content
     p My Tasks
         +errorSummary(errors)
-        form(action='/api/tasks' method='post')
-            input(type='hidden' name='_csrf' value=csrfToken)
-            +field('', 'name', name, '', 'Add a task...')
-            button(type='submit') Add
+        div#add-task-form
+            form(action='/api/tasks' method='post')
+                input(type='hidden' name='_csrf' value=csrfToken)
+                +field('', 'name', name, '', 'Add a task...')
+                div.add-task-button
+                    button(type='submit' disabled='true') Moo
 
-    div#taskContainer
+    div#tasks-container
