--- a/views/utils.pug
+++ b/views/utils.pug
@@ -7,6 +7,6 @@ mixin errorSummary(errors)
           li= error
 
 mixin field(fieldText, fieldName, fieldValue, fieldType = 'text', placeholder = null)
-  div
+  div(class='inp-div')
     label(for= fieldName) #{fieldText}
-      input(type=fieldType id=fieldName name=fieldName value=fieldValue placeholder=placeholder)
+      input(class='inp-field' type=fieldType id=fieldName name=fieldName value=fieldValue placeholder=placeholder)
