fixed the logout button

--- a/public/stylesheets/utils.css
+++ b/public/stylesheets/utils.css
@@ -26,6 +26,6 @@ button {
     border: none;
 }
 
-button:disabled {
+#add-task-input button:disabled {
     background-color: var(--tertiary-color);
 }
