made some references for importing js file

--- a/views/dashboard-list.pug
+++ b/views/dashboard-list.pug
@@ -29,6 +29,6 @@ block content
 
         div#summary
             include dashboard-summary.pug
-        script(src="/javascripts/dashboard-list.js")
-        script(src="/javascripts/dashboard-inbox.js")
-        script(src="/javascripts/dashboard-tasks.js")
+        script(src="/javascripts/dashboard-list.js" type="module")
+        script(src="/javascripts/dashboard-inbox.js" type="module")
+        script(src="/javascripts/dashboard-tasks.js" type="module")
