started the functionality for retrieving task summary.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -42,13 +42,17 @@
     overflow: hidden;
 }
 
-#taskContainer:hover {
+#tasksContainer:hover {
     overflow-y: scroll;
 }
 
-#taskContainer div {
+#tasksContainer div {
     padding: 0 3px;
     border-bottom: 1px dotted lightgray;
+}
+
+#tasksContainer div:hover {
+    background-color: #ffffc9;
 }
 
 .task {
