--- a/views/dashboard-list.pug
+++ b/views/dashboard-list.pug
@@ -32,3 +32,4 @@ block content
         script(src="/javascripts/dashboard-list.js" type="module")
         script(src="/javascripts/dashboard-inbox.js" type="module")
         script(src="/javascripts/dashboard-tasks.js" type="module")
+        script(src="/javascripts/dashboard-summary.js" type="module")
