splash-signup-login

--- a/views/user-login.pug
+++ b/views/user-login.pug
@@ -3,9 +3,16 @@ extends layout.pug
 include utils.pug
 
 block content
-    +errorSummary(errors)
-    form(action='/login' method='post')
-        input(type='hidden' name='_csrf' value=csrfToken)
-        +field('Username', 'username', username)
-        +field('Password', 'password', password, 'password')
-        button(type='submit') Submit
+    div#signupBt
+       button(type='submit')
+            a(href="/signup") Sign Up
+    div#login_main
+        +errorSummary(errors)
+        form(action='/login' method='post')
+            div#login_form
+                input(type='hidden' name='_csrf' value=csrfToken)
+                div#user_form
+                    +field('Username', 'username', username)
+                div#password_form
+                    +field('Password', 'password', password, 'password')
+                button(type='submit') Log In
