--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -2,6 +2,8 @@
 @import url("/stylesheets/sidebar.css");
 @import url("/stylesheets/summary.css");
 @import url("/stylesheets/utils.css");
+@import url("/stylesheets/signup.css");
+@import url("/stylesheets/login.css");
 
 :root {
     --main-color: #0055b2;
