--- a/views/user-signup.pug
+++ b/views/user-signup.pug
@@ -3,13 +3,24 @@ extends layout.pug
 include utils.pug
 
 block content
-    +errorSummary(errors)
-    form(action='/signup' method='post')
-        input(type='hidden' name='_csrf' value=csrfToken)
-        +field('Username', 'username', username)
-        +field('First Name', 'firstName', firstName)
-        +field('Last Name', 'lastName', lastName)
-        +field('Email Address', 'email', email, 'email')
-        +field('Password', 'password', password, 'password')
-        +field('Confirm Password', 'confirmPassword', confirmPassword, 'password')
-        button(type='submit') Sign Up
+    div#signup_main
+        div#loginBtCon
+            button(type='submit')
+                a(href="/login") Log in 
+        div#signup_container
+            div#img_container
+                div#image
+                    img(src='images/office.png')
+            div#form_container
+                div#errMsg
+                    +errorSummary(errors)
+                div#singupForm
+                    form(action='/signup' method='post')
+                    input(type='hidden' name='_csrf' value=csrfToken)
+                    +field('Username', 'username', username)
+                    +field('First Name', 'firstName', firstName)
+                    +field('Last Name', 'lastName', lastName)
+                    +field('Email Address', 'email', email, 'email')
+                    +field('Password', 'password', password, 'password')
+                    +field('Confirm Password', 'confirmPassword', confirmPassword, 'password')
+                    button(type='submit') Sign Up
