--- a/views/utils.pug
+++ b/views/utils.pug
@@ -6,7 +6,7 @@ mixin errorSummary(errors)
         each error in errors
           li= error
 
-mixin field(fieldText, fieldName, fieldValue, fieldType = 'text', placeholder = null, autocomplete = 'off')
+mixin field(fieldText, fieldName, fieldValue, fieldType = 'text', placeholder = null, autocomplete = 'off', errorFlag)
   div(class='inp-div')
     label(for= fieldName) #{fieldText}
-      input(class='inp-field' type=fieldType id=fieldName name=fieldName value=fieldValue placeholder=placeholder autocomplete=autocomplete)
+    input(class='inp-field' type=fieldType id=fieldName name=fieldName value=fieldValue placeholder=placeholder autocomplete=autocomplete)
