finished the home splash page

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -181,3 +181,60 @@ h1 {
 .pageIndicator .page-icon.active{
     background: #FFFFFF;
 }
+
+.social-container{
+    max-width: 1170px;
+    width: 70%;
+    margin: 70px auto;
+}
+
+.social-links{
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    padding: 5px;
+}
+
+.person{
+    margin: 0 auto;
+    
+}
+
+.person h4{
+    font-size: 18px;
+    color: #8b8b94;
+}
+
+.person ul{
+    list-style: none;
+}
+
+.person ul li{
+    padding: 5px;
+}
+
+.person ul li a{
+    text-decoration: none;
+    color: #8b8b94;
+}
+
+.person ul li a:hover{
+    background-color: lightgray;
+}
+
+.copyright{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 20px;
+}
+
+.copyright p{
+    color: #8b8b94;
+    margin-right: 10px;
+}
+
+.copyright a{
+    margin: 0 5px;
+    color: #8b8b94;
+    text-decoration: none;
+}
