--- a/views/dashboard-task.pug
+++ b/views/dashboard-task.pug
@@ -1,5 +1,8 @@
 include utils.pug
 
+append head
+    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css")
+
 div.checkbox-container
     div(class="checkbox grid-square")
         input(type="checkbox")
