Finished the general skeleton for upgrade, meet the team along with general css

--- a/views/home.pug
+++ b/views/home.pug
@@ -16,10 +16,10 @@ block content
                     li 
                         a(href="#") Tour
                     li 
-                        a(href="#") Upgrade  
+                        a(href="/upgrade") Upgrade  
                     
                     li 
-                        a(href="#") Meet the team 
+                        a(href="/team") Meet the team 
                     li 
                         a(href="/login") Log in
                     li(class="signup") 
@@ -70,7 +70,7 @@ block content
                         li
                             a(href="#") Instagram
                 div(class="haozhen person") 
-                    h4 Haozen
+                    h4 Haozhen
                     ul
                         li
                             a(href="#") Linkedin
