--- a/views/team.pug
+++ b/views/team.pug
@@ -14,7 +14,7 @@ block content
                 
                 ul
                     li 
-                        a(href="#") Tour
+                        a(href="/") Home
                     li 
                         a(href="/upgrade") Upgrade  
                     
