added more optimized images

--- a/views/team.pug
+++ b/views/team.pug
@@ -10,7 +10,7 @@ block content
         div.navbar-container
             div.navbar
                 a(href='/' class="moogo")
-                    img(src='images/logo.png', alt="cow-on-computer" id="logo")
+                    img(src='images/logo-o.png', alt="cow-on-computer" id="logo")
                 
                 ul
                     li 
@@ -28,10 +28,10 @@ block content
             div.header-content
                 h1 Meets your amazing team!
                 h2 Thank you for your hard work!
-                img(src="images/cowow.png", alt="cow money")
+                img(src="images/cowow-o.png", alt="cow money")
     main
         div(class="c-cow cow")
-            img(src="images/ccow.png", alt="cow in yellow shirt")
+            img(src="images/ccow-o.png", alt="cow in yellow shirt")
             div.about-left
                 h2 Christy
                 p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -39,9 +39,9 @@ block content
             div.about-right
                 h2 Haozhen
                 p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            img(src="images/hcow.png", alt="cow on phone")
+            img(src="images/hcow-o.png", alt="cow on phone")
         div(class="j-cow cow")
-            img(src="images/jcow.png", alt="rock star cow")
+            img(src="images/jcow-o.png", alt="rock star cow")
             div.about-left
                 h2 Justin
                 p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -49,7 +49,7 @@ block content
             div.about-right
                 h2 Peter
                 p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            img(src="images/pcow.png", alt="nerd cow")
+            img(src="images/pcow-o.png", alt="nerd cow")
             
     footer
         div.social-container
