--- a/views/upgrade.pug
+++ b/views/upgrade.pug
@@ -10,7 +10,7 @@ block content
         div.navbar-container
             div.navbar
                 a(href='/' class="moogo")
-                    img(src='images/logo.png', alt="cow-on-computer" id="logo")
+                    img(src='images/logo-o.png', alt="cow-on-computer" id="logo")
                 
                 ul
                     li 
@@ -29,7 +29,7 @@ block content
             h1 Get mooore done today!
             a(href="#") Upgrade Now
             h3 Only $999.99 per year
-            img(src="images/money-cow.png", alt="cow money")
+            img(src="images/money-cow-o.png", alt="cow money")
     footer
         div.social-container
             div.social-links 
