deleted all the unoptimized images

--- a/views/home.pug
+++ b/views/home.pug
@@ -10,7 +10,7 @@ block content
         div.navbar-container
             div.navbar
                 a(href='/' class="moogo")
-                    img(src='images/logo.png', alt="cow-on-computer" id="logo")
+                    img(src='images/logo-o.png', alt="cow-on-computer" id="logo")
                 
                 ul
                     li 
@@ -29,22 +29,22 @@ block content
             h1 Funny Slogan hur hur hur
             div.carousel
                 div(class="slide active")
-                    img(src="images/wavingCow.png", alt="" class="")
+                    img(src="images/wavingCow-o.png", alt="" class="")
                     div.carousel-info
                         h2 Don't forget!
                         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
                 div.slide
-                    img(src="images/office.png", alt="" class="")
+                    img(src="images/office-o.png", alt="" class="")
                     div.carousel-info
                         h2 Don't forget!
                         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
                 div.slide
-                    img(src="images/moosic.png", alt="" class="")
+                    img(src="images/moosic-o.png", alt="" class="")
                     div.carousel-info
                         h2 Don't forget!
                         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
                 div.slide
-                    img(src="images/cowblep.png", alt="" class="")
+                    img(src="images/cowblep-o.png", alt="" class="")
                     div.carousel-info
                         h2 Don't forget!
                         p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
