finished the deleting task and completing a task

--- a/views/dashboard-task.pug
+++ b/views/dashboard-task.pug
@@ -18,6 +18,8 @@ div.checkbox-container
         i(class="fas fa-list-alt")
     div(class="category grid-square")
         i(class="fas fa-tag")
+    div(class="delete grid-square")
+        i(class="fas fa-trash-alt")
 +errorSummary(errors)
 div#add-task-form
     form(id='add-task-input')
