--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -8,7 +8,9 @@
     --secondary-color: #a5c9e7;
     --tertiary-color: #cfe3f2;
     --divider-color: #b3d4ed;
+    --lightest-div-bg: #bdd7ea;
     --button-color-light: #1575c1;
+    --inp-border: lightgrey;
 }
 
 * {
@@ -45,13 +47,13 @@ body {
 /* content block positioning */
 #content {
     display: grid;
-    grid-template-columns: 200px 1fr 1fr;
+    grid-template-columns: 200px 1fr 10px 1fr;
     height: 100%;
-    padding-top: 10px;
+    padding: 10px 5px;
 }
 
 #sidebar {
-    padding: 20px;
+    padding: 0 20px;
 }
 
 #main {
@@ -59,5 +61,12 @@ body {
     padding: 20px;
     height: 100%;
     background-color: #ffffff;
+    border-radius: 5px 5px 0 0;
+}
+
+#summary {
+    position: relative;
+    width: 100%;
+    background-color: var(--lightest-div-bg);
     border-radius: 5px 5px 0 0;
 }
