--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -83,12 +83,12 @@
     width: 390px;
     height: 211px;
     margin-top: 30px;
+    z-index: 100;
 }
 
 .add-task-box {
     /* border: 1px red solid; */
     margin-top: 5px;
-
 }
 
 #add-list-form {
@@ -96,13 +96,12 @@
     flex-wrap: wrap;
 }
 
-#add-list-form label{
+#add-list-form label {
     /* border: 1px red solid; */
     top: 30px;
 }
 
-#add-list-form input{
-
+#add-list-form input {
     align-self: center;
     justify-self: center;
     top: 70px;
@@ -122,14 +121,14 @@
 }
 
 .cancel-submit-list {
-    background-color: #FBFBFA;
+    background-color: #fbfbfa;
     color: #444444;
     /* box-shadow: 0 2px 6px rgb(0 0 0 / 10%); */
     border: 1px solid #d1d1d1;
 }
 
 .close {
-    background-image: url('../images/close-x.png');
+    background-image: url("../images/close-x.png");
     background-repeat: no-repeat;
     position: absolute;
     right: 10px;
@@ -139,14 +138,14 @@
     background-color: white;
 }
 
-.checkbox-container{
-    display:grid;
+.checkbox-container {
+    display: grid;
     grid-template-columns: repeat(7, auto);
     justify-items: center;
     align-items: center;
 }
 
-.grid-square{
+.grid-square {
     display: grid;
     border: 1px solid lightgray;
     width: 50px;
@@ -155,6 +154,6 @@
     align-items: center;
 }
 
-.grid-square:hover{
+.grid-square:hover {
     background-color: #ffffc9;
 }
