--- a/public/stylesheets/utils.css
+++ b/public/stylesheets/utils.css
@@ -8,7 +8,7 @@ span.welcome {
 input {
     padding: 8px;
     margin: 10px 0px;
-    border: 1px solid lightgrey;
+    border: 1px solid var(--inp-border);
     border-radius: 3px;
 }
 
@@ -28,4 +28,9 @@ button {
 
 #add-task-input button:disabled {
     background-color: var(--tertiary-color);
+}
+
+textarea,
+input {
+    font-family: Helvetica, Arial, sans-serif;
 }
