--- a/views/dashboard-list.pug
+++ b/views/dashboard-list.pug
@@ -11,6 +11,7 @@ block content
                     button.logout(type='submit') Logout
     div#content
         div#sidebar
+            div.sidebar-logo
             div.lists
                 div.list-header Inbox
                 ol#default-lists
@@ -38,7 +39,7 @@ block content
                     div.add-list-buttons
                         button.submit-list(type="submit") Add
                         button.cancel-submit-list(type="submit") Cancel
-
+        div#spacer
         div#summary
             include dashboard-summary.pug
         script(src="/javascripts/dashboard-list.js" type="module")
