--- a/public/stylesheets/summary.css
+++ b/public/stylesheets/summary.css
@@ -7,6 +7,10 @@
 }
 
 .task-summary {
+    width: 0%;
+}
+
+.task-summary-display {
     position: absolute;
     background-color: white;
     width: 100%;
