error message show up below the box

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -4,6 +4,7 @@
 @import url("/stylesheets/utils.css");
 @import url("/stylesheets/signup.css");
 @import url("/stylesheets/login.css");
+@import url("/stylesheets/errors.css");
 
 :root {
     --main-color: #0055b2;
