--- a/public/stylesheets/summary.css
+++ b/public/stylesheets/summary.css
@@ -7,7 +7,10 @@
 }
 
 .task-summary {
-    width: 0%;
+    position: absolute;
+    right: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .task-summary-display {
@@ -17,6 +20,7 @@
     height: 100%;
     padding: 30px;
     border-radius: 5px 5px 0 0;
+    transition: all 0.4s;
 }
 
 /* summary details elements */
@@ -69,9 +73,8 @@ textarea.summary-inp {
     resize: none;
 }
 
-textarea.summary-inp:focus {
+.summary-inp-focus {
     height: 100px;
     resize: none;
-    transition: all 1s;
-    transition-timing-function: ease-in;
+    transition: all 0.4s;
 }
