finished task summary panel slide in for clicking on a task item.

--- a/views/dashboard-summary.pug
+++ b/views/dashboard-summary.pug
@@ -1,4 +1,4 @@
-div.task-details
-    div.task-recap
+div.task-summary
+    div#task-recap
         p details about the task
-    div.task-summary
+    div#task-details
